--- a/jms/docker-compose.yml
+++ b/jms/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     hostname: db
     image: postgres
     volumes:
-      - jms_postgres:/var/lib/postgresql/18/data
+      - jms_postgres:/var/lib/postgresql
     env_file:
       - .env
     ports:
